# CTI-STIX-Object-Scraper

stix-ner/: .gitignore  README.md  pyproject.toml  requirements.txt
stix-ner/data/annotated/: stix_ner_synthetic_conll.txt  stix_ner_synthetic_doccano.jsonl  stix_ner_synthetic_reviewed_sample_for_testing.json
stix-ner/data/raw/: cti_training_data_not_annotated.txt
stix-ner/examples/: demo.ipynb
stix-ner/scripts/: train.py
stix-ner/stix_ner/: Dockerfile  README.md  __init__.py  api.py  api_test.py  cli.py  config.template  docker-compose.yml  ner.py  requirements.txt  stix_mapper.py  utils.py
stix-ner/tests/: test_ner.py  test_stix_mapper.py
