[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stix-ner"
version = "0.1.0"
description = "NER-based extractor of STIX objects from unstructured text"
authors = [ { name="Your Name", email="you@example.com" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "transformers", "torch", "stix2", "spacy", "seqeval" ]

[project.scripts]
stix-ner = "stix_ner.cli:main"
